# mathico

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakeLists_old.txt  README.md  conanfile.txt  main.cpp  makefile
.github/workflows/: codeql.yml
buttons/: tbuttons.cpp  tbuttons.h  textbox.cpp  textbox.h
gui/: gui.cpp  gui.h
gui/page/: tpage.cpp  tpage.h
gui/page/buttons/: tbuttons.cpp  tbuttons.h
gui/page/slider/: slider.cpp  slider.h
gui/page/textboxes/: textbox.cpp  textbox.h
libs/math/: .clang-tidy  CMakeLists.txt  polygon.hpp
libs/math/include/math/: polygon.hpp  vmath.hpp
libs/math/src/: polygon.cpp  vmath.cpp
libs/ui/: CMakeLists.txt  clickable.hpp  tcolors.hpp
libs/ui/include/: page.hpp  textbox.hpp
libs/ui/src/: button.cpp  page.cpp  slider.cpp  textbox.cpp
libs/ui_lib/: CMakeLists.txt  clickable.hpp  tcolors.hpp
libs/ui_lib/include/ui_lib/: button.hpp  page.hpp  slider.hpp  textbox.hpp
libs/ui_lib/src/: button.cpp  page.cpp  slider.cpp  textbox.cpp
math/: TMath.cpp  TMath.h  polygon.cpp  polygon.h  vmath.cpp  vmath.h  vmath.hpp
new_gui/: gui.hpp  utility.hpp
new_gui/app_pages/: fern_page.hpp  logic.hpp  menu_page.hpp  polygon_page.hpp  save_page.hpp  sierpinski_page.hpp
new_gui/button/: button.cpp  button.hpp
new_gui/page/: page.cpp  page.hpp
new_gui/slider/: slider.cpp  slider.hpp
new_gui/textbox/: textbox.cpp  textbox.hpp
polygon/: point.cpp  polygon.cpp  polygon.h
resources/: tcolors.h
src/: CMakeLists.txt  gui.hpp  main.cpp
src/app_pages/: fern_page.hpp  gui.hpp  logic.hpp  polygon_page.hpp  save_page.hpp  sierpinski_page.hpp
src/app_pages/fern/: fern_page.cpp  fern_page.hpp
src/app_pages/main_menu/: menu_page.cpp  menu_page.hpp
src/app_pages/regular_polygon/: polygon_page.cpp  polygon_page.hpp
src/app_pages/save_menu/: save_page.cpp  save_page.hpp
src/app_pages/sierpinski/: sierpinski_page.cpp  sierpinski_page.hpp
test/: CMakeLists.txt  test_button.cpp  test_textbox.cpp
